(ERRORS) Update recipes to new spec