@@ -2,38 +2,32 @@ package vectorwing.farmersdelight.common.crafting;
 
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.DataResult;
+import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.minecraft.core.Holder;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.core.NonNullList;
-import net.minecraft.core.RegistryAccess;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.core.registries.Registries;
-import net.minecraft.network.FriendlyByteBuf;
+import net.minecraft.network.RegistryFriendlyByteBuf;
+import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.resources.ResourceKey;
-import net.minecraft.resources.ResourceLocation;
 import net.minecraft.sounds.SoundEvent;
-import net.minecraft.util.ExtraCodecs;
 import net.minecraft.util.RandomSource;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.crafting.Ingredient;
-import net.minecraft.world.item.crafting.Recipe;
-import net.minecraft.world.item.crafting.RecipeSerializer;
-import net.minecraft.world.item.crafting.RecipeType;
+import net.minecraft.world.item.crafting.*;
 import net.minecraft.world.level.Level;
-import net.neoforged.neoforge.items.wrapper.RecipeWrapper;
 import vectorwing.farmersdelight.common.crafting.ingredient.ChanceResult;
 import vectorwing.farmersdelight.common.registry.ModRecipeSerializers;
 import vectorwing.farmersdelight.common.registry.ModRecipeTypes;
 
-import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
-@SuppressWarnings("ClassCanBeRecord")
-public class CuttingBoardRecipe implements Recipe<RecipeWrapper>
+public class CuttingBoardRecipe implements Recipe<SingleRecipeInput>
 {
 	public static final int MAX_RESULTS = 4;
 
@@ -49,6 +43,16 @@ public class CuttingBoardRecipe implements Recipe<RecipeWrapper>
 		this.tool = tool;
 		this.results = results;
 		this.soundEvent = soundEvent;
+	}
+
+	@Override
+	public boolean matches(SingleRecipeInput input, Level level) {
+		return this.input.test(input.item());
+	}
+
+	@Override
+	public ItemStack assemble(SingleRecipeInput inv, HolderLookup.Provider provider) {
+		return this.results.getFirst().stack().copy();
 	}
 
 	@Override
@@ -73,18 +77,13 @@ public class CuttingBoardRecipe implements Recipe<RecipeWrapper>
 	}
 
 	@Override
-	public ItemStack assemble(RecipeWrapper inv, RegistryAccess access) {
-		return this.results.get(0).getStack().copy();
-	}
-
-	@Override
-	public ItemStack getResultItem(RegistryAccess access) {
-		return this.results.get(0).getStack();
+	public ItemStack getResultItem(HolderLookup.Provider provider) {
+		return this.results.getFirst().stack();
 	}
 
 	public List<ItemStack> getResults() {
 		return getRollableResults().stream()
-				.map(ChanceResult::getStack)
+				.map(ChanceResult::stack)
 				.collect(Collectors.toList());
 	}
 
@@ -105,13 +104,6 @@ public class CuttingBoardRecipe implements Recipe<RecipeWrapper>
 
 	public Optional<SoundEvent> getSoundEvent() {
 		return this.soundEvent;
-	}
-
-	@Override
-	public boolean matches(RecipeWrapper inv, Level level) {
-		if (inv.isEmpty())
-			return false;
-		return input.test(inv.getItem(0));
 	}
 
 	protected int getMaxInputCount() {
@@ -159,8 +151,8 @@ public class CuttingBoardRecipe implements Recipe<RecipeWrapper>
 
 	public static class Serializer implements RecipeSerializer<CuttingBoardRecipe>
 	{
-		private static final Codec<CuttingBoardRecipe> CODEC = RecordCodecBuilder.create(inst -> inst.group(
-				ExtraCodecs.strictOptionalField(Codec.STRING, "group", "").forGetter(CuttingBoardRecipe::getGroup),
+		private static final MapCodec<CuttingBoardRecipe> CODEC = RecordCodecBuilder.mapCodec(inst -> inst.group(
+				Codec.STRING.optionalFieldOf("group", "").forGetter(CuttingBoardRecipe::getGroup),
 				Ingredient.LIST_CODEC_NONEMPTY.fieldOf("ingredients").flatXmap(ingredients -> {
 					if (ingredients.isEmpty()) {
 						return DataResult.error(() -> "No ingredients for cutting recipe");
@@ -185,29 +177,32 @@ public class CuttingBoardRecipe implements Recipe<RecipeWrapper>
 					nonNullList.addAll(chanceResults);
 					return DataResult.success(nonNullList);
 				}, DataResult::success).forGetter(CuttingBoardRecipe::getRollableResults),
-				ExtraCodecs.strictOptionalField(BuiltInRegistries.SOUND_EVENT.byNameCodec(), "sound").forGetter(CuttingBoardRecipe::getSoundEvent)
+				SoundEvent.DIRECT_CODEC.optionalFieldOf("sound").forGetter(CuttingBoardRecipe::getSoundEvent)
 		).apply(inst, CuttingBoardRecipe::new));
+
+		public static final StreamCodec<RegistryFriendlyByteBuf, CuttingBoardRecipe> STREAM_CODEC = StreamCodec.of(CuttingBoardRecipe.Serializer::toNetwork, CuttingBoardRecipe.Serializer::fromNetwork);
 
 		public Serializer() {
 		}
 
 		@Override
-		public Codec<CuttingBoardRecipe> codec() {
+		public MapCodec<CuttingBoardRecipe> codec() {
 			return CODEC;
 		}
 
-		@Nullable
 		@Override
-		public CuttingBoardRecipe fromNetwork(FriendlyByteBuf buffer) {
+		public StreamCodec<RegistryFriendlyByteBuf, CuttingBoardRecipe> streamCodec() {
+			return STREAM_CODEC;
+		}
+
+		public static CuttingBoardRecipe fromNetwork(RegistryFriendlyByteBuf buffer) {
 			String groupIn = buffer.readUtf(32767);
-			Ingredient inputItemIn = Ingredient.fromNetwork(buffer);
-			Ingredient toolIn = Ingredient.fromNetwork(buffer);
+			Ingredient inputItemIn = Ingredient.CONTENTS_STREAM_CODEC.decode(buffer);
+			Ingredient toolIn = Ingredient.CONTENTS_STREAM_CODEC.decode(buffer);
 
 			int i = buffer.readVarInt();
 			NonNullList<ChanceResult> resultsIn = NonNullList.withSize(i, ChanceResult.EMPTY);
-			for (int j = 0; j < resultsIn.size(); ++j) {
-				resultsIn.set(j, ChanceResult.read(buffer));
-			}
+			resultsIn.replaceAll(ignored -> ChanceResult.read(buffer));
 			Optional<SoundEvent> soundEventIn = Optional.empty();
 			if (buffer.readBoolean()) {
 				Optional<Holder.Reference<SoundEvent>> holder = BuiltInRegistries.SOUND_EVENT.getHolder(buffer.readResourceKey(Registries.SOUND_EVENT));
@@ -219,18 +214,17 @@ public class CuttingBoardRecipe implements Recipe<RecipeWrapper>
 			return new CuttingBoardRecipe(groupIn, inputItemIn, toolIn, resultsIn, soundEventIn);
 		}
 
-		@Override
-		public void toNetwork(FriendlyByteBuf buffer, CuttingBoardRecipe recipe) {
+		public static void toNetwork(RegistryFriendlyByteBuf buffer, CuttingBoardRecipe recipe) {
 			buffer.writeUtf(recipe.group);
-			recipe.input.toNetwork(buffer);
-			recipe.tool.toNetwork(buffer);
+			Ingredient.CONTENTS_STREAM_CODEC.encode(buffer, recipe.input);
+			Ingredient.CONTENTS_STREAM_CODEC.encode(buffer, recipe.tool);
 			buffer.writeVarInt(recipe.results.size());
 			for (ChanceResult result : recipe.results) {
 				result.write(buffer);
 			}
 			if (recipe.getSoundEvent().isPresent()) {
 				Optional<ResourceKey<SoundEvent>> resourceKey = BuiltInRegistries.SOUND_EVENT.getResourceKey(recipe.getSoundEvent().get());
-                resourceKey.ifPresentOrElse(rk -> {
+				resourceKey.ifPresentOrElse(rk -> {
 					buffer.writeBoolean(true);
 					buffer.writeResourceKey(rk);
 				}, () -> buffer.writeBoolean(false));
